Moving everything into the net.lisias.ksp file system hierarchy; using KSPe abstarcted file system facilities for assets

--- a/Source/ConnectedLivingSpace/ConnectedLivingSpace.csproj
+++ b/Source/ConnectedLivingSpace/ConnectedLivingSpace.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Properties\LegalMamboJambo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Log.cs" />
+    <Compile Include="Assets.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
