Telling MM about us, so others add'ons can probe our presence on patching

--- a/Source/ConnectedLivingSpace/ConnectedLivingSpace.csproj
+++ b/Source/ConnectedLivingSpace/ConnectedLivingSpace.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Assets.cs" />
+    <Compile Include="ModuleManagerSupport.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
